Correcting footer size on small screens

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@
     padding: 15px;
     border-radius: 15px;
   }
+
+  footer {
+    font-size: small;
+  }
 }
 
 /* MIN-WIDTH:376PX */
